--- a/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
+++ b/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
@@ -231,6 +231,15 @@
     <PackageReference Include="LottieUWP">
       <Version>2.5.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter">
+      <Version>1.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>1.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
     </PackageReference>
