Add Pocket Api + Not WebView to popup for PocketAuth

--- a/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
+++ b/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
@@ -183,6 +183,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <None Include="Package.xml" />
+    <Content Include="Protocol.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -251,6 +252,9 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="PocketSharp">
+      <Version>4.2.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
