--- a/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
+++ b/GithubX.UWP/GithubX.UWP/GithubX.UWP.csproj
@@ -110,9 +110,9 @@
     <Compile Include="Services\Api\PocketApi.cs" />
     <Compile Include="Services\Cache\CacheKeys.cs" />
     <Compile Include="Services\Cache\ICache.cs" />
-    <Compile Include="Services\Cache\LocalCacheHandler.cs" />
-    <Compile Include="Services\Cache\ServerCacheHandler.cs" />
-    <Compile Include="Services\Cache\WindowsCacheHandler.cs" />
+    <Compile Include="Services\Cache\FileCache.cs" />
+    <Compile Include="Services\Cache\OnlineCache.cs" />
+    <Compile Include="Services\Cache\OSCache.cs" />
     <Compile Include="Services\UI\UIHandler.cs" />
     <Compile Include="Views\Dialogs\AboutPanel.xaml.cs">
       <DependentUpon>AboutPanel.xaml</DependentUpon>
@@ -223,23 +223,23 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="akavache.sqlite3">
+      <Version>5.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Html2Markdown">
       <Version>3.2.1.341</Version>
     </PackageReference>
-    <PackageReference Include="HtmlAgilityPack">
-      <Version>1.7.1</Version>
-    </PackageReference>
     <PackageReference Include="LottieUWP">
-      <Version>2.5.1</Version>
+      <Version>2.5.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
-      <Version>1.5.0</Version>
+      <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>1.5.0</Version>
+      <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>1.5.0</Version>
+      <Version>1.6.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
@@ -251,10 +251,13 @@
       <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.1</Version>
+      <Version>11.0.2</Version>
     </PackageReference>
     <PackageReference Include="PocketSharp">
       <Version>4.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Refit">
+      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
