--- a/source/GithubX.Shared/GithubX.Shared.csproj
+++ b/source/GithubX.Shared/GithubX.Shared.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="akavache" Version="6.0.30" />
     <PackageReference Include="Octokit" Version="0.32.0" />
+    <PackageReference Include="Octokit.Reactive" Version="0.32.0" />
+    <PackageReference Include="Refit" Version="4.6.48" />
   </ItemGroup>
 
 </Project>
