--- a/source/GithubX.UWP/GithubX.UWP.csproj
+++ b/source/GithubX.UWP/GithubX.UWP.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>GithubX.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17134.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -103,7 +103,6 @@
     <Compile Include="Services\Api\ApiKeys.cs" />
     <Compile Include="Services\Api\IGithubApi.cs" />
     <Compile Include="Services\Api\IXApi.cs" />
-    <Compile Include="Services\Api\PocketApi.cs" />
     <Compile Include="Services\CacheKeys.cs" />
     <Compile Include="Services\UIHandler.cs" />
     <Compile Include="Services\Utils.cs" />
@@ -134,8 +133,6 @@
     <Content Include="Assets\Files\d_bitcoin.png" />
     <Content Include="Assets\Files\d_eth.png" />
     <Content Include="Assets\Files\d_iran.png" />
-    <None Include="GithubX.UWP_StoreKey.pfx" />
-    <None Include="GithubX.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Files\Placeholder.png" />
@@ -213,9 +210,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="akavache.sqlite3">
-      <Version>6.0.30</Version>
-    </PackageReference>
     <PackageReference Include="Html2Markdown">
       <Version>3.2.1.341</Version>
     </PackageReference>
@@ -244,13 +238,10 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.1.181025003-prerelease</Version>
+      <Version>2.0.181018003</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="PocketSharp">
-      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="Refit">
       <Version>4.6.48</Version>
