--- a/source/GithubX.UWP/GithubX.UWP.csproj
+++ b/source/GithubX.UWP/GithubX.UWP.csproj
@@ -99,6 +99,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\ContentTypeToSymbolConverter.cs" />
     <Compile Include="Converters\FalseToVisibleConverter.cs" />
     <Compile Include="Converters\LanguageToColorConverter.cs" />
     <Compile Include="Converters\StringConcatConverter.cs" />
